--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="peta40-flex-header grid-x grid-padding-x">
           <img src="assets/img/stars-for-header-left-edit@2x.png" alt="" class="show-for-large">
           <img src="assets/img/Group1118@2x.png" alt="" class="hide-for-large mobile-star-group">
-          <a href="/"><img src="assets/img/peta40logo@2x.png" alt="" class="peta40logo"></a>
+          <a href="./"><img src="assets/img/peta40logo@2x.png" alt="" class="peta40logo"></a>
           <img src="assets/img/Group1256@2x.png" alt="" class="hide-for-large mobile-star-group">
           <img src="assets/img/stars-for-header-right-edit@2x.png" alt="" class="show-for-large">
       </div>
@@ -24,7 +24,7 @@
     <main class="grid-container-fluid main">
       <div class="grid-container home-content">
         <h2 class="party-title">An At-Home Party With the Stars!</h2>
-        <h3 class="party-subheading">IT’S A VERY SPECIAL PETA 40TH ANNIVERSARY CELEBRATION</h3>
+        <h3 class="party-subheading padding-horizontal-3">IT’S A VERY SPECIAL PETA 40TH ANNIVERSARY CELEBRATION</h3>
         <div class="grid-x grid-padding-x">
           <div class="large-7 peta40-info">
             <p>You won’t want to miss this: It’s the first-ever livestreamed PETA party! Be part of it all as we celebrate global victories from PETA’s cutting-edge campaigns. There will be celebrity award presentations, rollicking entertainment, humor, wonderful stories of animal rescues, a virtual gifting suite, real gift bags, and spectacular auction items. Plus, more exciting benefits will be available with each sponsorship level.</p> 
